tests/snapshots/formatter__roxygen_bail_ordered_list_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Steps:
#'
#' 1. first item that is reasonably long but must stay exactly on its own line
#' 2. second item that likewise stays exactly on its own physical source line
f <- function(x) x
