tests/snapshots/formatter__roxygen_md_blockquote_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @md
#' @details
#' > a *quote* with `code`
#' > and more
#' @name x
NULL
