tests/snapshots/formatter__roxygen_md_code_multiline_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Bail reflow around a multi-line code span
#'
#' @details
#' a `code
#' span` b
#' short lines after
#' stay unjoined too
#'
#' this sibling paragraph still reflows normally
#' @md
#' @name a
NULL

#' Emphasis-wrapped span and a from-value opener
#'
#' @details start `code
#' span` end
#'
#' *a `x
#' y` b*
#' @md
#' @name b
NULL
