tests/snapshots/formatter__roxygen_md_emphasis_multiline_reflow_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @details
#' A soft break inside *foo bar* joins into one span, and **strong across
#' lines** rewraps too.
#' @md
f <- function() NULL
