tests/snapshots/formatter__roxygen_md_heading_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @md
#' @details
#' # Heading
#' Body.
#' ## Sub
#' More.
#' @name x
NULL
