tests/snapshots/formatter__roxygen_md_html_cond7_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @md
#' @details
#' <span>
#'    kept   verbatim,   never reflowed
#'
#' <span> aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
#' bb
#'
#' mid-paragraph the tag may land on a wrapped line start safely <span> because
#' condition seven cannot interrupt an open paragraph at all zzzzzzzzz yyyyyyyy
#' @name a
NULL
