tests/snapshots/formatter__roxygen_md_html_conditions_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @title Demo
#' @md
#' @details
#' <!-- comment line one
#' comment line two -->
#' Between blocks.
#' <?php echo 1; ?>
#' <!DOCTYPE html>
#' <![CDATA[ raw < & data ]]>
#' Prose after the blocks.
#' @name demo
NULL
