tests/snapshots/formatter__roxygen_md_html_verbatim_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @title Demo
#' @md
#' @details
#' <pre>
#'   indented line
#' flush line
#' </pre>
#' Prose after the block.
#' @name demo
NULL
