tests/snapshots/formatter__roxygen_md_indented_code_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @title Demo
#' @md
#' @details
#' Prose line.
#'
#'     x <- 1
#'       nested <- 2
#'
#'     y <- 3
#' @name demo
NULL
