tests/snapshots/formatter__roxygen_md_linkref_continuation_reflows_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @details
#' See foo in this prose. [foo]: https://example.com/foo
#' @md
#' @name foo
NULL
