tests/snapshots/formatter__roxygen_md_setext_dash_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @md
#' @details
#' Foo
#' -
#' bar
#' @name x
NULL
